--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,7 @@
-// See https://aka.ms/vscode-remote/devcontainer.json for format details.
 {
     "name": "Python 3",
     "workspaceFolder": "/workspace",
-    "dockerComposeFile": "docker-compose.yaml",
+    "dockerComposeFile": "docker-compose.yml",
     "service": "research",
     "extensions": ["ms-python.python", "visualstudioexptteam.vscodeintellicode"]
 }
