--- a/omnimapper/docker-compose.yml
+++ b/omnimapper/docker-compose.yml
@@ -3,5 +3,7 @@ services:
     omnimapper:
         image: hbrs/slam
         environment:
-            - DISPLAY={YOUR_IP}:0.0
+            - DISPLAY=143.215.124.17:0.0
         command: sleep infinity
+        volumes:
+            - ./LSD_room.bag:/root/LSD_room.bag
