--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,5 @@ dmypy.json
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
 omnimapper/LSD_room.bag
+slam/LSD_room/images
+data/
