Added more documentation Added ORB_SLAM2 with live video input Added more data sets

--- a/slam/docker-compose.yml
+++ b/slam/docker-compose.yml
@@ -3,6 +3,6 @@ services:
     slam:
         image: nimashoghi/orb_slam2
         environment:
-            - DISPLAY=143.215.121.224:0.0
+            - DISPLAY=192.168.1.32:0.0
         volumes:
-            - ../data/roomba_output:/data
+            - ../data/roomba_video:/data
