--- a/calibration/CMakeLists.txt
+++ b/calibration/CMakeLists.txt
@@ -2,5 +2,9 @@ cmake_minimum_required(VERSION 2.8)
 project(calibration)
 find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
+
 add_executable(calibration src/main.cpp)
 target_link_libraries(calibration ${OpenCV_LIBS})
+
+add_executable(calibration_stereo src/stereo.cpp)
+target_link_libraries(calibration_stereo ${OpenCV_LIBS})
