--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/root/.cache/pypoetry/virtualenvs/hparch-platform-xS3fZVNL-py3.7/bin/python"
+    "python.pythonPath": "/root/.cache/pypoetry/virtualenvs/hparch-platform-xS3fZVNL-py3.7/bin/python",
+    "docker.defaultRegistryPath": "nimashoghi"
 }
