--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,6 @@
 {
     "name": "Python 3",
-    "workspaceFolder": "/workspace",
-    "dockerComposeFile": "docker-compose.yml",
-    "service": "research",
+    "image": "nimashoghi/python",
     "extensions": [
         "ms-python.python",
         "visualstudioexptteam.vscodeintellicode",
